# helix-adapter

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  QUICKSTART.md  README.md  RELEASE_NOTES_1.5.0.md  RELEASE_NOTES_1.6.0.md  RELEASE_NOTES_1.7.0.md  SECURITY.md  THEORY.md  e2e_merkle_test.py  pyproject.toml
.github/workflows/: lint.yml  pypi-publish.yml
docs/rfc/: glossary.md  rfc-0002-sparse-attention-governance.md  rfc-0003-cedar-policy-gating.md
examples/: README.md  receipts.json
foundry/: .gitignore  README.md  foundry.py  foundry_auth.py  foundry_db.py  foundry_keygen.py  routing.cedar  routing.schema
foundry/deployments/azure/: .env.example  models.json
foundry/deployments/qwen-intl/: .env.example  models.json
src/helix_adapter/: __init__.py  adapter.py  chat.py  drift.py  markers.py  merkle.py  prompt.py  receipt.py  session.py  setup.py  store.py
src/helix_adapter/cedar/: __init__.py  hooks.py  policy.py  schema.py
src/helix_adapter/cedar/policies/: helix.cedar  helix.policy  helix.schema
tests/: test_basic.py  test_cedar.py  test_merkle.py  test_session.py  test_v12_pipeline.py
widget/: api.py  helix-chat-api.service
widget/templates/: page.html  page.html.bak
