[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-adapter"
version = "0.1.0"
description = "Portable constitutional adapter — wraps any AI model with Helix epistemic markers, receipts, and drift detection"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Helix AI Innovations Inc.", email = "helix.project.ai@helixprojectai.com"},
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
helix-setup = "helix_adapter.setup:main"
helix-chat = "helix_adapter.chat:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
