[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-adapter"
version = "1.2.2"
description = "Portable constitutional adapter for any LLM. Forces epistemic markers, real-time drift detection, and tamper-evident receipts."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Stephen Hope", email = "helix.project.ai@helixprojectai.com"},
]
keywords = [
    "constitutional-ai", "llm-governance", "epistemic-markers", "drift-detection",
    "audit-trail", "trustworthy-ai", "model-agnostic", "helix-ttd", "ai-safety",
    "red-teaming", "receipts", "governance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://helixaiinnovations.ca"
Repository = "https://github.com/helixprojectai-code/helix-adapter"
"Live Demo" = "https://helixaiinnovations.ca/chat/"
"Bug Tracker" = "https://github.com/helixprojectai-code/helix-adapter/issues"

[project.scripts]
helix-setup = "helix_adapter.setup:main"
helix-chat = "helix_adapter.chat:main"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
widget = ["fastapi", "uvicorn", "openai", "anthropic"]
cedar = ["cedar_python"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/helix_adapter/prompt.py" = ["E501"]
"tests/test_v12_pipeline.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
